# ai-music-generation

./: .gitignore  .pre-commit-config.yaml  LICENCE  README.md  create_env.sh  mypy.ini  pyproject.toml  pyrightconfig.json
conf/base/: catalog.yaml  logging.yaml
nanoGPT/: sample.py  train.py
nanoGPT/config/: bach.py  bach_512_context.py  bach_512_context_augmented.py  bach_from_irishman.py  bach_from_irishman_512_context.py  bach_from_synthetic.py  bach_from_synthetic_512_context.py  bach_no_offsets.py  bach_no_offsets_512_context.py  irishman_char.py  irishman_char_1k_context.py  irishman_midi.py  irishman_midi_512_context.py  irishman_midi_no_offsets.py  irishman_whitespace.py  synthetic_4_parts_from_irishman.py  synthetic_4_parts_from_irishman_no_same_key.py  synthetic_4_parts_from_irishman_resampled.py  synthetic_4_parts_from_irishman_resampled_512_context.py
nanoGPT/data/bach_augmented/: prepare.py
nanoGPT/data/bach_no_offsets/: prepare.py
nanoGPT/data/bach_old/: prepare.py
nanoGPT/data/irishman/: prepare_BPE.py  prepare_char.py  prepare_sentence_piece.py  prepare_whitespace.py  prepare_wordpiece.py
nanoGPT/data/irishman_BPE/: prepare_BPE.py
nanoGPT/data/irishman_midi/: prepare.py
nanoGPT/data/irishman_midi_no_offsets/: prepare.py
nanoGPT/data/synthetic_4_parts_from_irishman/: prepare.py
nanoGPT/data/synthetic_4_parts_from_irishman_no_same_key/: prepare.py
nanoGPT/data/synthetic_4_parts_from_irishman_resampled/: prepare.py
scripts/: irishman_preprocess.py  irishman_split_validation_to_val_and_test.py  samples_to_midi_wav_and_aesthetics.py
scripts/classical_music/: calc_aesthetics.py  dataset_to_wav.py
scripts/common/: abc_to_midi_wav_and_aesthetics.py  create_generations_ranking.py  midi_and_wav_to_aesthetics.py  midi_to_text.py  midi_to_text_no_offsets.py  midi_to_text_unified.py  midi_to_wav_and_aesthetics.py  text_no_offsets_to_midi.py  text_to_midi.py  text_to_midi_unified.py
scripts/irishman_sripts/: dataset_to_midi_and_wav.py  irishman_dataset_to_midi.py  irishman_dataset_to_midi_and_wav.py  irishman_split_validation_to_val_and_test.py  irishman_to_leadsheet_subset.py  sample_tunesformer.py  samples_to_midi_wav_and_aesthetics.py  to_midi_and_wav.py
scripts/music21_corpus/: midi_to_text.py  text_to_midi.py
scripts/music21_corpus/bach/: bach_ground_truth.py  build_4part_dataset_no_resample.py  chorals_to_omit.py  generate_bach.py  measure_templates.py  pydantic_models.py  sample_synthetic_4_parts_from_irishman.py  score_template.py  score_templates.py  split_dataset.py  voices_ranges.py
scripts/music21_corpus/bach/stats/: measure_length_counts.json  score_templates.json
scripts/random_notes/: random_notes.py  randomly_sampled_measures.py  repeated_measures.py  repeated_notes.py  sampled_measures.py  sampled_parts_bach.py
sound_fonts/: aesthetics.json  sound_fonts.md
src/ai-music-generation/: __init__.py  __main__.py  pipeline_registry.py
src/ai-music-generation/pipelines/data_processing/: pipeline.py
src/ai_music_generation/: __init__.py  __main__.py  pipeline_registry.py
src/ai_music_generation/core/encodings/: encoder.py  (+3 more)
tunesformer/: generate.py  prompt.txt
(+7 files in other folders)
