[tool.kedro]
package_name = "ai_music_generation"
project_name = "ai-music-generation"
kedro_init_version = "0.19.5"

[tool.poetry]
name = "ai-music-generation"
package-mode = false
version = "0.1.0"
description = ""
authors = ["Jakub Kuciński"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
kedro = {version = "==0.19.5"}
kedro-datasets = {extras = ["pandas"], version = "==4.0.0"}
miditoolkit = "^1.0.1"
mido = "^1.3.2"
music21 = "^8.0"

[tool.poetry.group.lint]
optional = true

[tool.poetry.group.lint.dependencies]
pre-commit = "^3.7.1"
flake8 = "^7.0.0"
black = "^24.4.2"
isort = "^5.13.2"
mypy = "^1.10.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
kedro-viz = "^9.0.0"
notebook = "^7.2.1"
ipykernel = "^6.29.5"
devtools = "^0.12.2"
musicscore = "^2.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
