[tool.kedro]
package_name = "ai_music_generation"
project_name = "ai-music-generation"
kedro_init_version = "0.19.5"

[tool.poetry]
name = "ai-music-generation"
package-mode = false
version = "0.1.0"
description = ""
authors = ["Jakub Kuciński"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
kedro = {version = "==0.19.5"}
kedro-datasets = {extras = ["pandas"], version = "==4.0.0"}
miditoolkit = "^1.0.1"
mido = "^1.3.2"
music21 = "^8.0"
pydantic = "^2.8.2"
loguru = "^0.7.2"
midi2audio = "^0.1.1"
tqdm = "^4.67.1"
numpy = "^2.2.3"
torch = "^2.6.0"
types-tqdm = "^4.67.0.20241221"
transformers = {extras = ["torch"], version = "^4.49.0"}
tiktoken = "^0.9.0"
audiobox-aesthetics = "^0.0.2"
torchaudio = "^2.6.0"
pysoundfile = "^0.9.0.post1"
seaborn = "^0.13.2"
sox = "^1.5.0"
unidecode = "^1.4.0"
samplings = "^0.1.7"

[tool.poetry.group.lint]
optional = true

[tool.poetry.group.lint.dependencies]
pre-commit = "^3.7.1"
flake8 = "^7.0.0"
black = "^24.4.2"
isort = "^5.13.2"
mypy = "^1.10.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
kedro-viz = "^9.0.0"
notebook = "^7.2.1"
ipykernel = "^6.29.5"
devtools = "^0.12.2"
musicscore = "^2.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
exclude = ["data", "env", "venv", "tunesformer"]
